--- a/src/views/page1/css/Page1.scss
+++ b/src/views/page1/css/Page1.scss
@@ -1,16 +1,32 @@
-.cover {
-  color: white;
-  background: no-repeat center bottom;
-  background-size: cover;
-  background-image: url('../img/cover.jpg');
+.container {
+  position: relative;
   height: 100vh;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 
-  > div {
-    margin-bottom: 10px;
+  .cover {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute !important;
+    height: 100% !important;
+    width: 100% !important;
+
+    > img {
+      height: 100% !important;
+      object-fit: cover;
+    }
+  }
+
+  .content {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    color: white;
+
+    .title {
+      margin: 20% 0 10px;
+      text-shadow: 0 -1px 4px #FFF, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00;
+    }
   }
 }
